# solr-orbit

./: .asf.yaml  .asf.yml  .coveragerc  .fossa.yml  .gitignore  .pylintrc  .rat-excludes  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CREATE_WORKLOAD_GUIDE.md  DEVELOPER_GUIDE.md  INCUBATION_TODO.md  MANIFEST.in  Makefile  NOTICE  PYTHON_SUPPORT_GUIDE.md  README.md  THIRD_PARTY.md  TODO.md  benchmark  benchmarkd  create-notice.sh  pyproject.toml  run.sh  setup.py  tox.ini
.ci/: build.sh  variables.json
.ci/scripts/: check_deprecated_terms.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: check-actions-usage.yml  docker-build.yml  dockerfile-lint.yml  docs.yml  unit-test.yml
benchmarks/worker_coordinator/: parsing_test.py  runner_test.py
benchmarks/workload/: __init__.py  bulk_params_test.py
docker/: Dockerfile  README.md
docs/: README.md  _config.yml  about.md  faq.md  glossary.md  index.md  quickstart.md  search.json
docs/_includes/: breadcrumbs.html  footer.html  footer_custom.html  head.html  header.html  nav.html
docs/_layouts/: default.html
docs/_sass/: _base.scss  _callouts.scss  _content.scss  _layout.scss  _nav.scss  _responsive.scss  _search.scss  _variables.scss
docs/assets/css/: main.scss
docs/assets/js/: app.js
docs/cluster-config/: available-configs.md  index.md
docs/converter/: index.md  usage.md  what-converts.md
docs/reference/: index.md  summary-report.md  telemetry.md
docs/reference/commands/: aggregate.md  benchmarkd.md  command-flags.md  compare.md  create-workload.md  download.md  generate-data.md  index.md  info.md  install.md  list.md  run.md  start.md  stop.md  visualize.md
docs/reference/metrics/: filesystem-metrics-store.md  index.md  metric-records.md  metrics-reference.md
docs/reference/workloads/: collections.md  corpora.md  index.md  operations.md  test-procedures.md
docs/user-guide/: concepts.md  index.md
docs/user-guide/install-and-configure/: configuring.md  index.md  installing.md
docs/user-guide/optimizing-benchmarks/: best-practices.md  index.md  randomizing-queries.md  running-distributed-load.md  target-throughput.md
docs/user-guide/understanding-results/: index.md  telemetry.md  (+1 more)
it/: README.md  __init__.py  distribution_test.py  download_test.py  info_test.py  list_test.py  proxy_test.py  sources_test.py  tracker_test.py
it/resources/: benchmark-in-memory-it.ini
osbenchmark/: __init__.py  actor.py  benchmark.py  benchmarkd.py  client.py  config.py  context.py  exceptions.py  log.py  metrics.py  paths.py  publisher.py  result_writer.py  telemetry.py  test_run_orchestrator.py  time.py  version.py
osbenchmark/builder/: __init__.py  builder.py  cluster.py  cluster_config.py  java_resolver.py  launcher.py  provisioner.py  solr_provisioner.py  supplier.py
osbenchmark/conversion/: __init__.py  detector.py  field.py  schema.py  workload_converter.py
osbenchmark/resources/: benchmark.ini  custom-test-procedures.json.j2  default-test-procedures.json.j2  docker-compose.yml.j2  workload-schema.json
osbenchmark/solr/: runner.py
osbenchmark/synthetic_data_generator/: helpers.py
osbenchmark/utils/: __init__.py  collections.py  console.py  convert.py  git.py  io.py  jvm.py  modules.py  net.py  opts.py  process.py  repo.py  sysstats.py  versions.py
osbenchmark/visualizations/: benchmark_report_renderer.py
osbenchmark/worker_coordinator/: __init__.py  errors.py  runner.py  scheduler.py  worker_coordinator.py
osbenchmark/workload/: __init__.py  loader.py  params.py  workload.py
osbenchmark/workload_generator/: extractors.py  helpers.py  workload_generator.py
scripts/: analyze.py  download-rat.py  expand-data-corpus.py  release-checks.sh
solrbenchmark/: __init__.py  main.py
solrorbit/: __init__.py  actor.py  aggregator.py  benchmark.py  benchmarkd.py  client.py  config.py  context.py  exceptions.py  log.py  metrics.py  paths.py  publisher.py  result_writer.py  telemetry.py  test_run_orchestrator.py  time.py  version.py
solrorbit/builder/: __init__.py  builder.py  cluster.py  cluster_builder.py  cluster_config.py  java_resolver.py  launcher.py  provisioner.py  solr_provisioner.py  supplier.py
solrorbit/conversion/: query.py  schema.py  workload_converter.py
solrorbit/resources/: benchmark.ini  custom-test-procedures.json.j2  default-test-procedures.json.j2  docker-compose.yml.j2  logging.json  workload-schema.json
solrorbit/synthetic_data_generator/: helpers.py  input_processor.py  models.py  synthetic_data_generator.py  synthetic_data_generator_orchestrator.py  timeseries_partitioner.py  types.py
solrorbit/utils/: collections.py  console.py  convert.py  dataset.py  git.py  io.py  jvm.py  modules.py  net.py  opts.py  parse.py  periodic_waiter.py  process.py  repo.py  s3_data_producer.py  sysstats.py  versions.py
solrorbit/visualizations/: benchmark_report_renderer.py
solrorbit/worker_coordinator/: __init__.py  errors.py  runner.py  scheduler.py  worker_coordinator.py
solrorbit/workload/: __init__.py  ingestion_manager.py  loader.py  params.py  workload.py
solrorbit/workload_generator/: config.py  extractors.py  helpers.py  workload_generator.py
tests/: __init__.py  aggregator_test.py  client_test.py  config_test.py  metrics_test.py  publisher_test.py  scripts_test.py  test_execution_orchestrator_test.py  time_test.py
tests/builder/: cluster_config_test.py  java_resolver_test.py  launcher_test.py  mechanic_test.py  provisioner_test.py  supplier_test.py
tests/synthetic_data_generator/: incorrect_sample_custom_module.py  sample_custom_module.py  strategies_test.py  synthetic_data_generator_test.py
tests/unit/: test_telemetry.py
tests/utils/: __init__.py  collections_test.py  console_test.py  convert_test.py  dataset_helper.py  dataset_test.py  git_test.py  io_test.py  jvm_test.py  net_test.py  opts_test.py  parse_test.py  periodic_waiter_test.py  process_test.py  repo_test.py  versions_test.py
tests/worker_coordinator/: runner_test.py  scheduler_test.py  worker_coordinator_test.py
tests/workload/: loader_test.py  params_test.py  workload_test.py
(+116 files in other folders)
